--- a/templates/staff-create-flight.html
+++ b/templates/staff-create-flight.html
@@ -14,51 +14,63 @@
             <div class="alert alert-success">{{success}}</div>
             {% endif %}
             <form action="/staff-create-flight-auth" method="POST" redirect>
-                <div class="form-group">
-                    <label for="airline-name2">Airline Name</label>
-                    <input class="form-control" id="airline-name2" type="text" placeholder="" name="airline-name" required>
-                </div>
-                <div class="form-group">
-                    <label for="departure-date2">Departure Date</label>
-                    <input class="form-control" id="departure-date2" type="date" placeholder="" name="departure-date" required>
-                </div>
-                <div class="form-group">
-                    <label for="departure-time2">Departure Time</label>
-                    <input class="form-control" id="departure-time2" type="time" placeholder="" name="departure-time" required>
-                </div>
-                <div class="form-group">
-                    <label for="flight-number2">Flight Number</label>
-                    <input class="form-control" id="flight-number2" type="text" placeholder="" name="flight-number" required>
+                <div class="row">
+                    <div class="form-group col-md-8">
+                        <label for="airline-name2">Airline Name</label>
+                        <input class="form-control" id="airline-name2" type="text" placeholder="Delta" name="airline-name" required>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="flight-number2">Flight Number</label>
+                        <input class="form-control" id="flight-number2" type="text" placeholder="123" name="flight-number" required>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="departure-airport2">Departure Airport</label>
-                    <input class="form-control" id="departure-airport2" type="text" placeholder="" name="departure-airport" required>
+                    <input class="form-control" id="departure-airport2" type="text" placeholder="JFK" name="departure-airport" required>
+                </div>
+                <div class="row">
+                    <div class="form-group col-md-6">
+                        <label for="departure-date2">Departure Date</label>
+                        <input class="form-control" id="departure-date2" type="date" placeholder="" name="departure-date" required>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="departure-time2">Departure Time</label>
+                        <input class="form-control" id="departure-time2" type="time" placeholder="" name="departure-time" required>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="arrival-airport2">Arrival Airport</label>
-                    <input class="form-control" id="arrival-airport2" type="text" placeholder="" name="arrival-airport" required>
+                    <input class="form-control" id="arrival-airport2" type="text" placeholder="LAX" name="arrival-airport" required>
                 </div>
-                <div class="form-group">
-                    <label for="arrival-date2">Arrival Date</label>
-                    <input class="form-control" id="arrival-date2" type="date" placeholder="" name="arrival-date" required>
+                <div class="row">
+                    <div class="form-group col-md-6">
+                        <label for="arrival-date2">Arrival Date</label>
+                        <input class="form-control" id="arrival-date2" type="date" placeholder="" name="arrival-date" required>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="arrival-time2">Arrival Time</label>
+                        <input class="form-control" id="arrival-time2" type="time" placeholder="" name="arrival-time" required>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="arrival-time2">Arrival Time</label>
-                    <input class="form-control" id="arrival-time2" type="time" placeholder="" name="arrival-time" required>
-                </div>
-                <div class="form-group">
-                    <label for="base-price2">Base Price</label>
-                    <input class="form-control" id="base-price2" type="text" placeholder="" name="base-price" required>
-                </div>
-                <div class="form-group">
-                    <label for="airplane-ID2">Airplane ID</label>
-                    <input class="form-control" id="airplane-ID2" type="text" placeholder="" name="airplane-ID" required>
+                <div class="row">
+                    <div class="form-group col-md-8">
+                        <label for="base-price2">Base Price</label>
+                        <div class="input-group">
+                            <div class="input-group-addon">$</div>
+                            <input class="form-control" id="base-price2" type="text" placeholder="300" name="base-price" required>
+                        </div>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="airplane-ID2">Airplane ID</label>
+                        <input class="form-control" id="airplane-ID2" type="text" placeholder="123" name="airplane-ID" required>
+                    </div>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-block">Submit</button>
-                    <h4><a href="http://127.0.0.1:5000/staff-home">Return Home</a></h4>
                 </div>
             </form>
+            <hr>
+            <h4 class="text-center"><a href="http://127.0.0.1:5000/staff-home">Return Home</a></h4>
         </div>
     </div>
 {% endblock %}
