--- a/templates/staff-home.html
+++ b/templates/staff-home.html
@@ -14,16 +14,16 @@
         <hr>
         <h3>View</h3>
         <h4><a href="http://127.0.0.1:5000/staff-flight-view">Flights 🔎</a></h4>
-        <h4><a href="http://127.0.0.1:5000/staff-ratings-view">Ratings</a></h4>
-        <h4><a href="http://127.0.0.1:5000/staff-revenue-view">Revenue</a></h4>
+        <h4><a href="http://127.0.0.1:5000/staff-view-ratings">Ratings ⭐️</a></h4>
+        <h4><a href="http://127.0.0.1:5000/staff-revenue-view">Revenue 📈</a></h4>
         <h4><a href="http://127.0.0.1:5000/staff-frequent-customers">Frequent Customers</a></h4>
         <h4><a href="http://127.0.0.1:5000/staff-top-destinations">Top Destinations</a></h4>
         <br>
         <h3>Staff Permissions</h3>
         <h4><a href="http://127.0.0.1:5000/staff-create-flight">Create Flights</a></h4>
-        <h4><a href="http://127.0.0.1:5000/change-status">Change Flight Status</a></h4>
-        <h4><a href="http://127.0.0.1:5000/add-airplane">Add Airplane</a></h4>
-        <h4><a href="http://127.0.0.1:5000/add-airport">Add Airport</a></h4>
+        <h4><a href="http://127.0.0.1:5000/staff-update-flight-status">Change Flight Status</a></h4>
+        <h4><a href="http://127.0.0.1:5000/staff-add-airplane">Add Airplane</a></h4>
+        <h4><a href="http://127.0.0.1:5000/staff-add-airport">Add Airport</a></h4>
 
     </div>
 {% endblock %}
