--- a/templates/customer-rate-flight.html
+++ b/templates/customer-rate-flight.html
@@ -25,18 +25,18 @@
                         <div class="form-group">
                             <label for="cust-rating-input">Rating</label>
                             <select id="cust-rating-input" class="form-control" name="rating">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
+                                <option value="1.0">1</option>
+                                <option value="2.0">2</option>
+                                <option value="3.0">3</option>
+                                <option value="4.0">4</option>
+                                <option value="5.0">5</option>
                             </select>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="cust-comment-input">Comment</label>
-                    <textarea class="form-control" id="cust-comment-input" rows="3" placeholder="Write a comment" required></textarea>
+                    <textarea class="form-control" id="cust-comment-input" rows="3" placeholder="Write a comment" name="comment" required></textarea>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-block">Submit</button>
