--- a/templates/staff-registration.html
+++ b/templates/staff-registration.html
@@ -38,10 +38,11 @@
                     <input class="form-control" id="staff-password-input" type="password" placeholder="abc123" name="password" required>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-secondary">Submit</button>
-                    <h4><a href="http://127.0.0.1:5000">Return home</a></h4>
+                    <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 </div>
             </form>
+            <hr>
+            <h4 class="text-center"><a href="http://127.0.0.1:5000">Return home</a></h4>
         </div>
     </div>
 {% endblock %}
